argocd/applications/nextcloud/cron.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-cron"
  name: "nextcloud-cron"
  namespace: "nextcloud"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "nextcloud"
      service: "nextcloud-cron"

  template:
    metadata:
      labels:
        app: "nextcloud"
        service: "nextcloud-cron"
      name: "nextcloud-cron"
      namespace: "nextcloud"

    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "kubernetes.io/hostname"
                  operator: In
                  values:
                    - "thicket3"

      containers:
        - name: "cron"
          # UPDATE IN app.yaml AS WELL:
          # tag 29.0.13-fpm-alpine
          #image: "nextcloud@sha256:809ce152986caebc1abf1449a4e1d067bdb54fe2728c6b050471f22d31d3186b"
          image: "tlake/customized-nextcloud@sha256:c7acf9d72da2f1c8c45f9320369652e51e04bcaca73eb1fb4f83b6f9570164cb"
          imagePullPolicy: "IfNotPresent"
          command:
            - "/cron.sh"

          resources:
            requests:
              cpu: "75m"
              memory: "50Mi"

          volumeMounts:
            - mountPath: "/var/www/html"
              name: "nextcloud-storage"

            - mountPath: "/var/www/html/data"
              name: "nextcloud-data"

      imagePullSecrets:
        - name: "dockerhub-tlake-read-only"

      volumes:
        - name: "nextcloud-storage"
          persistentVolumeClaim:
            claimName: "nextcloud-storage"

        - name: "nextcloud-data"
          persistentVolumeClaim:
            claimName: "nextcloud-data"
