argocd/applications/nextcloud/rsync.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-rsync"
  name: "nextcloud-rsync"
  namespace: "nextcloud"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "nextcloud"
      service: "nextcloud-rsync"

  template:
    metadata:
      labels:
        app: "nextcloud"
        service: "nextcloud-rsync"
      name: "nextcloud-rsync"
      namespace: "nextcloud"

    spec:
      containers:
        - name: "rsync"

          image: "ogivuk/rsync:latest"

          resources:
            requests:
              cpu: "200m"
              memory: "50Mi"

          volumeMounts:
            - name: "nextcloud-storage"
              mountPath: "/data/source/nextcloud-storage"
              readOnly: true

            - name: "nextcloud-storage-backup"
              mountPath: "/data/destination"

            - name: "crontab"
              mountPath: "/rsync/crontab"
              subPath: "crontab"

      volumes:
        - name: "nextcloud-storage"
          persistentVolumeClaim:
            claimName: "nextcloud-storage"

        - name: "nextcloud-storage-backup"
          persistentVolumeClaim:
            claimName: "nextcloud-storage-backup"

        - name: "crontab"
          configMap:
            name: "nextcloud-rsync-crontab"
