argocd/applications/nextcloud/transfer.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-transfer"
  name: "nextcloud-transfer"
  namespace: "nextcloud"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "nextcloud"
      service: "nextcloud-transfer"

  template:
    metadata:
      labels:
        app: "nextcloud"
        service: "nextcloud-transfer"
      name: "nextcloud-transfer"
      namespace: "nextcloud"

    spec:
      containers:
        - name: "nextcloud-transfer"
          command: [ "/bin/sh", "-c", "--" ]
          args: [ "while true; do sleep 30; done;" ]
          image: "alpine:latest"
          volumeMounts:
            - mountPath: "/var/www/html"
              name: "nextcloud-storage"

            - mountPath: "/var/www/html/data"
              name: "nextcloud-data"

            - mountPath: "/transfer"
              name: "nextcloud-transfer"

      volumes:
        - name: "nextcloud-storage"
          persistentVolumeClaim:
            claimName: "nextcloud-storage"

        - name: "nextcloud-data"
          persistentVolumeClaim:
            claimName: "nextcloud-data"

        - name: "nextcloud-transfer"
          persistentVolumeClaim:
            claimName: "nextcloud-transfer"
