argocd/applications/nextcloud/app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-app"
  name: "nextcloud-app"
  namespace: "nextcloud"

spec:
  replicas: 1
  revisionHistoryLimit: 1

  selector:
    matchLabels:
      app: "nextcloud"
      service: "nextcloud-app"

  template:
    metadata:
      labels:
        app: "nextcloud"
        service: "nextcloud-app"
      name: "nextcloud-app"
      namespace: "nextcloud"

    spec:
      containers:
        - name: "nextcloud-app"
          image: "nextcloud:29.0-fpm-alpine"
          ports:
            - name: "app"
              containerPort: 80
              protocol: "TCP"

          volumeMounts:
            - mountPath: "/var/www/html"
              name: "nextcloud-storage"

            - mountPath: "/var/www/html/custom_apps"
              name: "nextcloud-custom-apps"

            - mountPath: "/var/www/html/config"
              name: "nextcloud-config"

            - mountPath: "/var/www/html/data"
              name: "nextcloud-data"

            - mountPath: "/var/www/html/themes"
              name: "nextcloud-themes"

      volumes:
        - name: "nextcloud-storage"
          persistentVolumeClaim:
            claimName: "nextcloud-storage"

        - name: "nextcloud-custom-apps"
          persistentVolumeClaim:
            claimName: "nextcloud-custom-apps"

        - name: "nextcloud-config"
          persistentVolumeClaim:
            claimName: "nextcloud-config"

        - name: "nextcloud-data"
          persistentVolumeClaim:
            claimName: "nextcloud-data"

        - name: "nextcloud-themes"
          persistentVolumeClaim:
            claimName: "nextcloud-themes"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-app"
  name: "nextcloud-app"
  namespace: "nextcloud"

spec:
  ports:
    - name: "fpm"
      port: 9000
      targetPort: "app"

  selector:
    app: "nextcloud"
    service: "nextcloud-app"

  type: NodePort
