argocd/applications/nextcloud/db.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-postgres"
  name: "nextcloud-postgres"
  namespace: "nextcloud"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: "nextcloud"
      service: "nextcloud-postgres"
  template:
    metadata:
      labels:
        app: "nextcloud"
        service: "nextcloud-postgres"
      name: "nextcloud-postgres"
      namespace: "nextcloud"
    spec:
      containers:
        - name: "nextcloud-postgres"

          image: "postgres:16"

          ports:
            - name: "db"
              containerPort: 5432

          volumeMounts:
            - name: "postgres-data"
              mountPath: "/var/lib/postgresql/data"

      volumes:
        - name: "postgres-data"
          persistentVolumeClaim:
            claimName: "postgres-data"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-postgres"
  name: "nextcloud-postgres"
  namespace: "nextcloud"

spec:
  ports:
    - name: "db"
      port: 5432
      protocol: TCP
      targetPort: "db"

  selector:
    app: "nextcloud"
    service: "nextcloud-postgres"

  type: NodePort
