argocd/applications/nextcloud/redis.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-redis"
  name: "nextcloud-redis"
  namespace: "nextcloud"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "nextcloud"
      service: "nextcloud-redis"

  template:
    metadata:
      labels:
        app: "nextcloud"
        service: "nextcloud-redis"
      name: "nextcloud-redis"
      namespace: "nextcloud"

    spec:
      containers:
        - name: "nextcloud-redis"
          # tag: alpine-3.21
          image: "redis@sha256:02419de7eddf55aa5bcf49efb74e88fa8d931b4d77c07eff8a6b2144472b6952"
          imagePullPolicy: "IfNotPresent"

          ports:
            - name: "redis"
              containerPort: 6379
              protocol: "TCP"

          resources:
            requests:
              cpu: "20m"
              memory: "20Mi"

      imagePullSecrets:
        - name: "dockerhub-tlake-read-only"


---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-redis"
  name: "nextcloud-redis"
  namespace: "nextcloud"

spec:
  ports:
    - name: "redis"
      port: 6379
      targetPort: "redis"

  selector:
    app: "nextcloud"
    service: "nextcloud-redis"

  type: NodePort
