argocd/applications/nextcloud/proxy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-nginx"
  name: "nextcloud-nginx"
  namespace: "nextcloud"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "nextcloud"
      service: "nextcloud-nginx"

  template:
    metadata:
      labels:
        app: "nextcloud"
        service: "nextcloud-nginx"
      name: "nextcloud-nginx"
      namespace: "nextcloud"

    spec:
      containers:
        - name: "nextcloud-nginx"
          image: "nginx:1.19.6-alpine"

          ports:
            - name: "proxy"
              containerPort: 80
              protocol: "TCP"

          resources:
            requests:
              cpu: "2m"
              memory: "12Mi"

          volumeMounts:
            - mountPath: "/etc/nginx/nginx.conf"
              name: "nextcloud-nginx-config"
              subPath: "nginx.conf"

            - mountPath: "/var/www/html"
              name: "nextcloud-storage"

            - mountPath: "/var/www/html/data"
              name: "nextcloud-data"

      volumes:
        - name: "nextcloud-nginx-config"
          configMap:
            name: "nextcloud-nginx-config"

        - name: "nextcloud-storage"
          persistentVolumeClaim:
            claimName: "nextcloud-storage"

        - name: "nextcloud-data"
          persistentVolumeClaim:
            claimName: "nextcloud-data"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-nginx"
  name: "nextcloud-nginx"
  namespace: "nextcloud"

spec:
  ports:
    - name: "http-traffic"
      port: 80
      targetPort: "proxy"

  selector:
    app: "nextcloud"
    service: "nextcloud-nginx"

  type: NodePort

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-nginx"
  name: "nextcloud-web"
  namespace: "nextcloud"

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`cloud.tlake.io`)
      kind: Rule
      services:
        - name: "nextcloud-nginx"
          port: "http-traffic"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "nextcloud"
    service: "nextcloud-nginx"
  name: "nextcloud-websecure"
  namespace: "nextcloud"

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`cloud.tlake.io`)
      kind: Rule
      services:
        - name: "nextcloud-nginx"
          port: "http-traffic"

  tls:
    certResolver: "production"
